resolve constraits to cell

--- a/VIPER-Air/Base.lproj/Main.storyboard
+++ b/VIPER-Air/Base.lproj/Main.storyboard
@@ -15,9 +15,24 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="XyO-4C-AHB">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="XyO-4C-AHB" secondAttribute="bottom" id="028-wX-Wwb"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="XyO-4C-AHB" secondAttribute="trailing" id="Cdy-wE-e8L"/>
+                            <constraint firstItem="XyO-4C-AHB" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="jhy-ss-g6t"/>
+                            <constraint firstItem="XyO-4C-AHB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="yMz-fV-kYz"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="XyO-4C-AHB" id="mt7-vD-9L1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
